[gd_scene load_steps=7 format=3 uid="uid://c338whou4al23"]

[ext_resource type="Material" uid="uid://b863l3lxgsu55" path="res://Resources/Shaders/palette_swap_material.tres" id="1_cieob"]
[ext_resource type="Script" path="res://Scenes and Scripts/UI/Tooltip.gd" id="1_eetpi"]
[ext_resource type="Texture2D" uid="uid://dbeck067rce7m" path="res://Textures/UI/tooltip_panel.png" id="3_6mdg5"]
[ext_resource type="FontFile" uid="uid://dohkbu7ekkfx8" path="res://Textures/Fonts/pixeltype/Pixeltype.ttf" id="4_64fg8"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vj2uj"]
content_margin_top = 5.0
content_margin_bottom = 5.0
texture = ExtResource("3_6mdg5")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="FontVariation" id="FontVariation_2xm4r"]
base_font = ExtResource("4_64fg8")

[node name="Tooltip" type="Node" node_paths=PackedStringArray("TooltipPanel", "TooltipLabel", "TooltipContainer")]
script = ExtResource("1_eetpi")
offset = Vector2(2.08165e-12, 20)
delay = 0.5
TooltipPanel = NodePath("TooltipPanel")
TooltipLabel = NodePath("TooltipPanel/HBoxContainer/Label")
TooltipContainer = NodePath("TooltipPanel/HBoxContainer")

[node name="TooltipTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="TooltipPanel" type="PanelContainer" parent="."]
visible = false
z_index = 6
material = ExtResource("1_cieob")
offset_right = 13.0
offset_bottom = 19.0
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_vj2uj")

[node name="HBoxContainer" type="HBoxContainer" parent="TooltipPanel"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
theme_override_constants/separation = 1

[node name="Label" type="Label" parent="TooltipPanel/HBoxContainer"]
material = ExtResource("1_cieob")
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
theme_override_fonts/font = SubResource("FontVariation_2xm4r")
theme_override_font_sizes/font_size = 12
vertical_alignment = 2

[connection signal="timeout" from="TooltipTimer" to="." method="_on_tooltip_timer_timeout"]
